<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corner_custom"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center_vertical"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/logo" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="Aplicación de recetario médico."
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="Por favor ingrese sus datos de acceso."
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@android:style/TextAppearance.DeviceDefault.Widget.IconMenu.Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/username"
            app:boxBackgroundColor="#FFFFFF"
            app:endIconDrawable="@drawable/ic_person"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            style="@android:style/TextAppearance.DeviceDefault.Widget.IconMenu.Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/password"
            app:boxBackgroundColor="#FFFFFF"
            app:endIconDrawable="@android:drawable/ic_menu_view"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbPaciente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_margin="5dp"
                android:buttonTint="@color/colorPrimary"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/paciente"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rbMedico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_margin="5dp"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/medico"
                android:textSize="14sp" />

        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_iniciar"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/login"
                style="@style/textoBoton"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/design_default_color_on_primary"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_regitrar"
                style="@style/textoBoton"
                android:layout_width="195dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_toStartOf="@+id/btn_iniciar"
                android:layout_toLeftOf="@+id/btn_iniciar"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/register"
                android:textColor="@color/colorAccent"

                />

        </RelativeLayout>


    </LinearLayout>

</ScrollView>
